; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_hdspm.c_snd_hdspm_enable_in.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_hdspm.c_snd_hdspm_enable_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdspm = type { i32 }

@HDSPM_inputEnableBase = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hdspm*, i32, i32)* @snd_hdspm_enable_in to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_hdspm_enable_in(%struct.hdspm* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.hdspm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.hdspm* %0, %struct.hdspm** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.hdspm*, %struct.hdspm** %4, align 8
  %8 = load i64, i64* @HDSPM_inputEnableBase, align 8
  %9 = load i32, i32* %5, align 4
  %10 = mul nsw i32 4, %9
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %8, %11
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @hdspm_write(%struct.hdspm* %7, i64 %12, i32 %13)
  ret void
}

declare dso_local i32 @hdspm_write(%struct.hdspm*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
